--- a/src/reset.css
+++ b/src/reset.css
@@ -9,7 +9,7 @@ body, #root {
   position: absolute;
   top: 0;
   left: 0;
-  min-width: 100vw;
+  min-width: 100%;
   min-height: 100vh;
   margin: 0;
   padding: 0;
